<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="205dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/horarios"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/borde_tabla_exterior_shape">

        <TableRow>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_superior"
                android:text="@string/horario_dias" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_superior"
                android:text="@string/horario_horario" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_superior"
                android:text="@string/horario_edad" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_superior"
                android:text="@string/horario_precio" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_lx" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_1920" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_1416" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_precio1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_mj" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_1718" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_1719" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_precio1" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_lx" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_2022" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_1922" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="@string/horario_precio2" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="" />
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/borde_tabla_interior"
                android:text="" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>