<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/green_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactenos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/contacto_contactenos"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Sara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:text="@string/contacto_sara"
            android:textColor="@color/green_darker"
            android:textSize="20sp"
            android:background="@drawable/rectangle"/>

        <TextView
            android:id="@+id/email_Sara1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/contacto_mail_sara"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/email_Sara2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacto_mail_sara_2"
            android:gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Raul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="15dp"
            android:text="@string/contacto_raul"
            android:textColor="@color/green_darker"
            android:textSize="20sp"
            android:background="@drawable/rectangle"/>

        <TextView
            android:id="@+id/email_Raul1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/contacto_mail_raul"
            android:textSize="18sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>