<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green_light"
    tools:context=".ui.menu.PerfilFragment">

    <!-- Division entre header y contenido -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/green_dark"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/perfil_flechaAtras"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/backarrowicon"
                 />
            
            <ImageView
                android:id="@+id/perfil_ImagenUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:src="@drawable/iconoperfil"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/perfil_nombreUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/usuario_id" />

                    <TextView
                        android:id="@+id/perfil_correoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:text="@string/nav_correo" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Contenido -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="35dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/perfil_nombre_completo" />

            <TextView
                android:id="@+id/perfil_nombreCompletoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/perfil_nombre_completo_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/perfil_correo" />

            <!-- No quiero que se qude vacia la pantalla asi que ponemos otra vez esto -->
            <TextView
                android:id="@+id/perfil_correoContactoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/perfil_correo_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/perfil_telefono" />

            <TextView
                android:id="@+id/perfil_telefonoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/perfil_telefono_hint" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>