<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/green_light"
    tools:context=".ui.register.SingUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="478dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/registrarse"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usuario_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:padding="15dp"
                android:hint="@string/usuario_nombre"
                android:textSize="18sp"
                android:background="@drawable/rectangle" />

            <EditText
                android:id="@+id/usuario_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:hint="@string/usuario_apellidos"
                android:textSize="18sp"
                android:background="@drawable/rectangle" />

            <EditText
                android:id="@+id/usuario_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:hint="@string/usuario_telefono"
                android:textSize="18sp"
                android:background="@drawable/rectangle" />

            <EditText
                android:id="@+id/usuario_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:hint="@string/usuario_email"
                android:textSize="18sp"
                android:background="@drawable/rectangle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario_contrasena1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usuario_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:hint="@string/login_pass"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario_contrasena2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usuario_contrasena_rep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:hint="@string/signup_pass_repeat"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!--androidx.appcompat.widget.AppCompatButton
                android:id="@+id/boton_cancelar"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="50dp"
                android:background="@drawable/rectangle_button_dark"
                android:text="Cancelar"
                android:textColor="@color/white"
                android:textSize="16sp" /-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/boton_registrarse"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/rectangle_button_light"
                android:text="@string/registrarse"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <!--TextView
            android:id="@+id/iniciar_sesion"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="42dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:text="¿Ya tienes cuenta? Iniciar sesion"
            android:textColor="@color/green_03"
            android:textStyle="bold"
            android:textSize="16sp" /-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/iniciar_sesion"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:text="@string/signup_login"
            android:textColor="@color/green_03"
            android:textStyle="bold"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_ayuntamiento"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="start|bottom"
                android:text="@string/login_ayuntamiento"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/contactanos"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="50dp"
                android:text="@string/login_contacto"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>